gitops/manifests/rocinante-alias/hsts-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: hsts
  namespace: rocinante
spec:
  headers:
    stsSeconds: 15552000
    stsIncludeSubdomains: true
    stsPreload: false
